renamed sections in hard-coded config.jsons

--- a/hard-coded/chart-types/bubble/config.json
+++ b/hard-coded/chart-types/bubble/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "bubble"
+    "relative_url": "Bubble Charts"
 }
