--- a/hard-coded/chart-types/config.json
+++ b/hard-coded/chart-types/config.json
@@ -1,6 +1,6 @@
 {
     "has_thumbnail": true, 
-    "name": "chart-types for the people",
+    "name": "Chart Types",
     "order": [
         "scatter",
         "bar",
