--- a/hard-coded/chart-types/contour/config.json
+++ b/hard-coded/chart-types/contour/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "contour"
+    "relative_url": "Contour Plots"
 }
