--- a/hard-coded/chart-types/scatter/config.json
+++ b/hard-coded/chart-types/scatter/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "scatterz for the people", 
-    "relative_url": "scatter"
+    "relative_url": "Scatter Plots"
 }
