--- a/hard-coded/multiple-axes-insets-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
-    "name": "Multiple Axes for the people",
+    "name": "Multiple Axes, Insets and Subplots",
     "order": []
 }
