--- a/hard-coded/chart-types/error-bar/config.json
+++ b/hard-coded/chart-types/error-bar/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "error-bar"
+    "relative_url": "Error Bars"
 }
