--- a/hard-coded/chart-types/histogram/config.json
+++ b/hard-coded/chart-types/histogram/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "Histograms for the people", 
-    "relative_url": "histogramz"
+    "relative_url": "Histograms"
 }
