--- a/hard-coded/chart-types/time-series/config.json
+++ b/hard-coded/chart-types/time-series/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "time-series"
+    "relative_url": "Time Series"
 }
