--- a/hard-coded/file-settings/extending-graphs/config.json
+++ b/hard-coded/file-settings/extending-graphs/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "extending-graphs"
+    "relative_url": "Extending Graphs"
 }
