--- a/hard-coded/file-settings/file-naming/config.json
+++ b/hard-coded/file-settings/file-naming/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "file-naming"
+    "relative_url": "File Naming"
 }
