--- a/hard-coded/layout/global-font/config.json
+++ b/hard-coded/layout/global-font/config.json
@@ -1,5 +1,5 @@
 {
     "has_thumbnail": true, 
     "name": "for the people", 
-    "relative_url": "global-font"
+    "relative_url": "Global Font"
 }
