finished filling out config files

--- a/hard-coded/file-settings/config.json
+++ b/hard-coded/file-settings/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": false, 
+    "has_thumbnail": false,
     "name": "File Settings",
-    "order": []
+    "order": ["file-naming", "extending-graphs", "privacy"]
 }
