--- a/hard-coded/file-settings/privacy/config.json
+++ b/hard-coded/file-settings/privacy/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Privacy Settings"
+    "has_thumbnail": false,
+    "name": "Public vs Private Graphs",
+    "relative_url": "privacy"
 }
