--- a/hard-coded/file-settings/privacy/privacy-false/config.json
+++ b/hard-coded/file-settings/privacy/privacy-false/config.json
@@ -1,13 +1,13 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
+        "python",
+        "node",
+        "r",
+        "matlab",
         "julia"
-    ], 
+    ],
     "plot-options": {
         "world_readable": false
-    }, 
-    "name": "for the people"
+    },
+    "name": "Private Graphs"
 }
