--- a/hard-coded/layout/annotations/mpl-simple-annotation/config.json
+++ b/hard-coded/layout/annotations/mpl-simple-annotation/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "matplotlib Syntax Simple Annotation",
-    "description": "Annotations with matplotlib",
+    "name": "Simple Annotation with the <code>annotate</code> method",
     "languages" : []
 }
