--- a/hard-coded/layout/annotations/text-chart-basic/config.json
+++ b/hard-coded/layout/annotations/text-chart-basic/config.json
@@ -6,5 +6,5 @@
         "matlab",
         "julia"
     ],
-    "name": "Adding Text to Line Plots"
+    "name": "Adding Text to Data in Line Plots"
 }
