--- a/hard-coded/layout/axes/config.json
+++ b/hard-coded/layout/axes/config.json
@@ -1,5 +1,6 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Axes"
+    "has_thumbnail": false,
+    "name": "Axes",
+    "relative_url": "axes",
+    "description": "How to adjust axes properties in {language}. {num_examples} of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines."
 }
