--- a/hard-coded/layout/config.json
+++ b/hard-coded/layout/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": false, 
+    "has_thumbnail": false,
     "name": "Layout Options",
-    "order": []
+    "order": ["annotations", "axes", "font", "labels", "latex", "legends", "sizing"]
 }
