--- a/hard-coded/layout/font/global-font/config.json
+++ b/hard-coded/layout/font/global-font/config.json
@@ -6,5 +6,5 @@
         "matlab",
         "julia"
     ],
-    "name": "Positionining the Legend Inside the Plot"
+    "name": "Global Font Properties"
 }
