--- a/hard-coded/layout/latex/config.json
+++ b/hard-coded/layout/latex/config.json
@@ -1,5 +1,6 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "LaTeX"
+    "has_thumbnail": false,
+    "name": "LaTeXi",
+    "relative_url": "LaTeX",
+    "description": "How to add LaTeX to {language} graphs."
 }
