--- a/hard-coded/layout/legends/config.json
+++ b/hard-coded/layout/legends/config.json
@@ -1,5 +1,7 @@
 {
-    "has_thumbnail": false, 
-    "name": "legendz", 
-    "relative_url": "Legends"
+    "has_thumbnail": false,
+    "name": "Legends",
+    "relative_url": "legend",
+    "description": "How to modify the legend in {language} graphs. {num_examples} examples of how to move, color, and hide the legend.",
+    "order": ["legend-visibility", "legend-labels", "legend-inside", "legend-outside", "legend-style"]
 }
