--- a/hard-coded/layout/sizing/config.json
+++ b/hard-coded/layout/sizing/config.json
@@ -1,5 +1,6 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Sizing"
+    "has_thumbnail": true,
+    "name": "Sizing",
+    "relative_url": "sizing",
+    "description": "How to change the size of graphs in {language}."
 }
