--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/config.json
@@ -1,5 +1,6 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Multiple Axes"
+    "has_thumbnail": false,
+    "name": "Multiple Axes",
+    "relative_url": "multiple-axes",
+    "order": ["multiple-axes-double", "multiple-axes-multiple"]
 }
