--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-multiple/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-multiple/config.json
@@ -1,10 +1,9 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
+        "python",
+        "node",
+        "r",
         "julia"
-    ], 
-    "name": "for the people"
+    ],
+    "name": "Multiple Y-Axes"
 }
