--- a/hard-coded/multiple-axes-insets-subplots/subplots/matlab-three-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/matlab-three-subplots/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "MATLAB Syntax Plot with Three Subplots",
-    "description": "Graph with Three Subplots made with MATLAB",
+    "name": "MATLAB's <code>subplot</code> command",
     "languages" : []
 }
