--- a/hard-coded/multiple-axes-insets-subplots/subplots/mpl-simple-subplot/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/mpl-simple-subplot/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "matplotlib Syntax Basic Subplots",
-    "description": "Making Subplots with matplotlib",
+    "name": "matplotlib's <code>subplot</code> command",
     "languages" : []
 }
