--- a/hard-coded/layout/annotations/config.json
+++ b/hard-coded/layout/annotations/config.json
@@ -1,5 +1,7 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Annotations"
+    "has_thumbnail": true,
+    "name": "Text and Annotations",
+    "relative_url": "text-and-annotations",
+    "description": "How to add text labels and annotations to plots in {language}.",
+    "order": ["matlab-text-chart-basic", "text-chart-basic", "simple-annotation", "multiple-annotation", "text-chart-styling"]
 }
