--- a/hard-coded/layout/axes/axes-range-mode/config.json
+++ b/hard-coded/layout/axes/axes-range-mode/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
+        "python",
+        "node",
+        "r",
+        "matlab",
         "julia"
-    ], 
-    "name": "for the people"
+    ],
+    "name": "<code>Nonnegative</code>, <code>tozero</code>, and <code>normal</code> rangemode"
 }
