--- a/hard-coded/layout/labels/config.json
+++ b/hard-coded/layout/labels/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Labels"
+    "has_thumbnail": true,
+    "name": "Labels",
+    "relative_url": "labels"
 }
