--- a/hard-coded/layout/legends/legend-outside/config.json
+++ b/hard-coded/layout/legends/legend-outside/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
+        "python",
+        "node",
+        "r",
+        "matlab",
         "julia"
-    ], 
-    "name": "for the people"
+    ],
+    "name": "Positioning the Legend Outside the Plot"
 }
