--- a/hard-coded/multiple-axes-insets-subplots/subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/config.json
@@ -1,5 +1,13 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Subplots"
+    "has_thumbnail": false,
+    "name": "Subplots",
+    "relative_url": "subplot",
+    "order": ["matlab-three-subplots",
+              "tools-get-subplots",
+              "simple-subplot",
+              "custom-size-subplot",
+              "multiple-subplots",
+              "shared-axes-subplots",
+              "stacked-subplots",
+              "stacked-coupled-subplots"]
 }
