--- a/hard-coded/multiple-axes-insets-subplots/subplots/stacked-coupled-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/stacked-coupled-subplots/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
+        "python",
+        "node",
+        "r",
+        "matlab",
         "julia"
-    ], 
-    "name": "for the people"
+    ],
+    "name": "Stacked Subplots with a Shared X-Axis"
 }
