--- a/hard-coded/config.json
+++ b/hard-coded/config.json
@@ -1,10 +1,11 @@
 {
-    "has_thumbnail": true, 
+    "has_thumbnail": false, 
     "name": "API Page for the people",
     "order": [
         "chart-types",
         "multiple-axes-insets-subplots",
         "layout",
         "file-settings"
+        "specialty"
     ]
 }
