--- a/hard-coded/specialty /stft/matlab-basic-stft/config.json
+++ b/hard-coded/specialty /stft/matlab-basic-stft/config.json
@@ -3,5 +3,6 @@
         "matlab", 
     ], 
     "init": false, 
-    "name": "for the people"
+    "name": "for the people",
+    "prepend": true
 }
