add specialty folder in meta

--- a/hard-coded/config.json
+++ b/hard-coded/config.json
@@ -5,7 +5,7 @@
         "chart-types",
         "multiple-axes-insets-subplots",
         "layout",
-        "file-settings"
+        "file-settings",
         "specialty"
     ]
 }
