--- a/hard-coded/layout/legends/config.json
+++ b/hard-coded/layout/legends/config.json
@@ -3,5 +3,5 @@
     "name": "Legends",
     "relative_url": "legend",
     "description": "How to modify the legend in {language} graphs. {num_examples} examples of how to move, color, and hide the legend.",
-    "order": ["legend-visibility", "legend-labels", "legend-inside", "legend-outside", "legend-style"]
+    "order": ["legend-visibility", "legend-labels", "matlab-legend-inside","legend-inside","matlab-legend-outside","legend-outside", "legend-style"]
 }
