modified config to include overlaid + styled bar charts

--- a/hard-coded/chart-types/bar/config.json
+++ b/hard-coded/chart-types/bar/config.json
@@ -2,7 +2,7 @@
     "has_thumbnail": true,
     "name": "Bar Charts",
     "relative_url": "bar-chart",
-    "order": ["matlab-basic-bar", "matlab-grouped-bar", "matlab-stacked-bar",
+    "order": ["matlab-basic-bar", "matlab-grouped-bar", "matlab-stacked-bar","matlab-overlaid-bar","matlab-style-bar",
               "basic-bar", "grouped-bar", "stacked-bar", "style-bar"],
-    "description": "How to make a bar chart in {language}. {num_examples} of grouped, stacked, and colored bar charts."
+    "description": "How to make a bar chart in {language}. {num_examples} of grouped, stacked, overlaid, and colored bar charts."
 }
