Updated configs; added a couple examples

--- a/hard-coded/chart-types/bar/config.json
+++ b/hard-coded/chart-types/bar/config.json
@@ -4,5 +4,5 @@
     "relative_url": "bar-chart",
     "order": ["matlab-basic-bar", "matlab-grouped-bar", "matlab-stacked-bar","matlab-overlaid-bar","matlab-style-bar",
               "basic-bar", "grouped-bar", "stacked-bar", "style-bar"],
-    "description": "How to make a bar chart in {language}. {num_examples} of grouped, stacked, overlaid, and colored bar charts."
+    "description": "How to make a bar chart in {language}. {num_examples} examples of grouped, stacked, overlaid, and colored bar charts."
 }
