--- a/hard-coded/chart-types/config.json
+++ b/hard-coded/chart-types/config.json
@@ -2,7 +2,7 @@
     "has_thumbnail": true,
     "name": "Chart Types",
     "order": [
-        "scatter_and_scatter",
+        "line_and_scatter",
         "line_exclusive",
         "scatter_exclusive",
         "bar",
