--- a/hard-coded/chart-types/contour/config.json
+++ b/hard-coded/chart-types/contour/config.json
@@ -3,5 +3,5 @@
     "name": "Contour Plots",
     "relative_url": "contour-plots",
     "order": ["matlab-simple-contour", "matlab-meshgrid-contour", "matlab-contour-subplots", "simple-contour", "2dhistogram-contour-subplots"],
-    "description": "How to make a contour plot in {language}. {num_examples} of contour plots of matrices with subplots, custom color-scales, and smoothing."
+    "description": "How to make a contour plot in {language}. {num_examples} examples of contour plots of matrices with subplots, custom color-scales, and smoothing."
 }
