--- a/hard-coded/chart-types/heatmap/RdBu-heatmap/config.json
+++ b/hard-coded/chart-types/heatmap/RdBu-heatmap/config.json
@@ -1,11 +1,11 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
+        "python",
+        "node",
+        "r",
+        "matlab",
         "julia"
-    ], 
-    "init": true, 
-    "name": "for the people"
+    ],
+    "init": true,
+    "name": "RdBu Colorscale"
 }
