--- a/hard-coded/chart-types/heatmap/config.json
+++ b/hard-coded/chart-types/heatmap/config.json
@@ -1,7 +1,7 @@
 {
     "has_thumbnail": true,
     "name": "Heatmaps",
-    "relative_url": "heatmaps",
+    "relative_url": "heatmap",
     "order": ["matlab-basic-heatmap",
               "basic-heatmap",
               "labelled-heatmap",
