--- a/hard-coded/chart-types/heatmap/matlab-basic-heatmap/config.json
+++ b/hard-coded/chart-types/heatmap/matlab-basic-heatmap/config.json
@@ -1,5 +1,5 @@
 {
     "name": "MATLAB Syntax Basic Heatmap",
-    "description": "A simple Heatmap made with MATLAB",
+    "description": "Simple Heatmap with <code>imagesc</code>",
     "languages" : []
 }
