--- a/hard-coded/chart-types/histogram/config.json
+++ b/hard-coded/chart-types/histogram/config.json
@@ -3,5 +3,5 @@
     "name": "Histograms",
     "relative_url": "histogram",
     "order": ["matlab-basic-histogram","matlab-stacked-histogram","matlab-overlaid-histogram","matlab-horizontal-histogram", "basic-histogram", "horizontal-histogram", "overlaid-histogram", "stacked-histogram", "style-histogram"],
-    "description": "How to make a histogram in {language}. {num_examples} of colored, horizontal, and normal histogram bar charts."
+    "description": "How to make a histogram in {language}. {num_examples} examples of colored, horizontal, and normal histogram bar charts."
 }
