--- a/hard-coded/chart-types/line_and_scatter/config.json
+++ b/hard-coded/chart-types/line_and_scatter/config.json
@@ -2,6 +2,6 @@
     "has_thumbnail": true,
     "name": "Line and Scatter Plots",
     "relative_url": "line-and-scatter",
-    "description": "How to make line and scatter plots in {language}. {num_examples} of basic and colored line and scatter plots.",
-    "order": ["basic-line", "line-scatter", "line-style", "data-visible"]
+    "description": "How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.",
+    "order": ["basic-line", "line-scatter", "line-style"]
 }
