--- a/hard-coded/chart-types/line_exclusive/basic-line2/config.json
+++ b/hard-coded/chart-types/line_exclusive/basic-line2/config.json
@@ -1,15 +1,6 @@
 {
     "languages": [
-        "python", 
-        "node", 
-        "r", 
-        "matlab", 
-        "julia"
-    ], 
-    "tags": [
-        "scatter", 
-        "line"
-    ], 
-    "description": "Seriously? It's a GD line plot!", 
+        "matlab"
+    ],
     "name": "Basic Line Plot"
 }
