--- a/hard-coded/chart-types/polar/config.json
+++ b/hard-coded/chart-types/polar/config.json
@@ -1,7 +1,7 @@
 {
     "has_thumbnail": true,
     "name": "Polar Charts",
-    "relative_url": "polar-charts",
+    "relative_url": "polar-chart",
     "description": "How to graph polar charts in {language}. {num_examples} examples of polar line, polar scatter and and polar area charts.",
     "order": ["polar-line", "polar-scatter", "polar-area-chart"]
 }
