--- a/hard-coded/chart-types/time-series/config.json
+++ b/hard-coded/chart-types/time-series/config.json
@@ -2,5 +2,6 @@
     "has_thumbnail": true,
     "name": "Time Series",
     "relative_url": "time-series",
-    "description": "How to plot date and time in {language}, an example of a time-series plot."
+    "description": "How to plot date and time in {language}. An example of a time-series plot.",
+    "order": ["python-datetime", "date-axes"]
 }
