--- a/hard-coded/file-settings/privacy/privacy-false/config.json
+++ b/hard-coded/file-settings/privacy/privacy-false/config.json
@@ -6,5 +6,6 @@
         "matlab",
         "julia"
     ],
-    "name": "Private Graphs"
+    "name": "Private Graphs",
+    "plot-options": {"world_readable": false}
 }
