--- a/hard-coded/file-settings/privacy/privacy-true/config.json
+++ b/hard-coded/file-settings/privacy/privacy-true/config.json
@@ -6,5 +6,6 @@
         "matlab",
         "julia"
     ],
-    "name": "Public Graphs"
+    "name": "Public Graphs",
+    "plot-options": {"world_readable": true}
 }
