--- a/hard-coded/layout/latex/config.json
+++ b/hard-coded/layout/latex/config.json
@@ -1,6 +1,6 @@
 {
     "has_thumbnail": false,
-    "name": "LaTeXi",
+    "name": "LaTeX",
     "relative_url": "LaTeX",
     "description": "How to add LaTeX to {language} graphs."
 }
