--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/config.json
@@ -1,6 +1,7 @@
 {
-    "has_thumbnail": false,
+    "has_thumbnail": true,
     "name": "Multiple Axes",
     "relative_url": "multiple-axes",
-    "order": ["multiple-axes-double", "multiple-axes-multiple"]
+    "order": ["multiple-axes-double", "multiple-axes-multiple"],
+    "description": "How to make a graph with multiple axes in {language}."
 }
