--- a/hard-coded/multiple-axes-insets-subplots/subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": false,
+    "has_thumbnail": true,
     "name": "Subplots",
     "relative_url": "subplot",
     "order": ["matlab-three-subplots",
@@ -9,5 +9,6 @@
               "multiple-subplots",
               "shared-axes-subplots",
               "stacked-subplots",
-              "stacked-coupled-subplots"]
+              "stacked-coupled-subplots"],
+    "description": "How to make subplots in {language}. {num_examples} of stacked, custom-sized, and gridded subplots."
 }
