--- a/hard-coded/layout/legends/show-legend/config.json
+++ b/hard-coded/layout/legends/show-legend/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
         "python",
+        "matlab",
         "node",
         "r",
-        "matlab",
         "julia"
     ],
-    "name": "Hiding Data"
+    "name": "Hide Legend Entry"
 }
