--- a/hard-coded/multiple-axes-insets-subplots/insets/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/insets/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": true, 
-    "name": "for the people", 
-    "relative_url": "Insets"
+    "has_thumbnail": true,
+    "name": "Inset Plots",
+    "relative_url": "insets"
 }
