--- a/hard-coded/multiple-axes-insets-subplots/matlab-multiple-axes/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/matlab-multiple-axes/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": false,
+    "has_thumbnail": true,
     "name": "plotyy and Multiple Axes",
     "relative_url": "plotyy",
     "order": ["matlab-two-axes-plot", "matlab-two-axes-plot-bar", "multiple-axes-double", "matlab-axes-multiple"]
