--- a/hard-coded/multiple-axes-insets-subplots/matlab-multiple-axes/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/matlab-multiple-axes/config.json
@@ -2,5 +2,5 @@
     "has_thumbnail": false,
     "name": "plotyy and Multiple Axes",
     "relative_url": "plotyy",
-    "order": ["matlab-two-axes-plot", "matlab-two-axes-plot-bar", "multiple-axes-double", "matlab-axes-multiple"]
+    "order": ["matlab-two-axes-plot", "matlab-two-axes-plot-bar", "matlab-two-axes-plot-style", "multiple-axes-double", "matlab-axes-multiple"]
 }
