Fixed contour-scatter example. Indexing for z matrix was backwards.

--- a/hard-coded/chart-types/mixed/contour-scatter/config.json
+++ b/hard-coded/chart-types/mixed/contour-scatter/config.json
@@ -1,4 +1,4 @@
 {
     "languages": ["python", "matlab", "r", "node", "julia"],
-    "name": "Steepest Ascent with Contour and Scatter"
+    "name": "Steepest Descent with Contour and Scatter",
 }
