added streaming + some config updates

--- a/hard-coded/layout/annotations/config.json
+++ b/hard-coded/layout/annotations/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": true,
+    "has_thumbnail": false,
     "name": "Text and Annotations",
     "relative_url": "text-and-annotations",
     "description": "How to add text labels and annotations to plots in {language}.",
