--- a/hard-coded/layout/font/config.json
+++ b/hard-coded/layout/font/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": true,
+    "has_thumbnail": false,
     "name": "Text and Font Styling",
     "relative_url": "font",
     "description": "How to edit and style the fonts in {language}."
