--- a/hard-coded/layout/sizing/config.json
+++ b/hard-coded/layout/sizing/config.json
@@ -1,5 +1,5 @@
 {
-    "has_thumbnail": true,
+    "has_thumbnail": false,
     "name": "Sizing",
     "relative_url": "sizing",
     "description": "How to change the size of graphs in {language}."
