first basic line+scatter MATLAB

--- a/hard-coded/chart-types/line_and_scatter/config.json
+++ b/hard-coded/chart-types/line_and_scatter/config.json
@@ -3,5 +3,5 @@
     "name": "Line and Scatter Plots",
     "relative_url": "line-and-scatter",
     "description": "How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.",
-    "order": ["basic-line", "line-scatter", "line-style"]
+    "order": ["matlab-line-and-scatter-basic", "basic-line", "line-scatter", "line-style"]
 }
