--- a/hard-coded/chart-types/box/basic-box-plot/config.json
+++ b/hard-coded/chart-types/box/basic-box-plot/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "julia"
-    ],
-    "init": true,
+        "python", 
+        "r", 
+        "julia", 
+        "nodejs"
+    ], 
+    "init": true, 
     "name": "Basic Box Plot"
 }
