--- a/hard-coded/chart-types/histogram/style-histogram/config.json
+++ b/hard-coded/chart-types/histogram/style-histogram/config.json
@@ -1,11 +1,11 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "matlab",
-        "julia"
-    ],
-    "init": true,
+        "python", 
+        "r", 
+        "matlab", 
+        "julia", 
+        "nodejs"
+    ], 
+    "init": true, 
     "name": "Colored and Styled Histograms"
 }
