--- a/hard-coded/chart-types/line_and_scatter/line-scatter/config.json
+++ b/hard-coded/chart-types/line_and_scatter/line-scatter/config.json
@@ -1,9 +1,9 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "julia"
-    ],
+        "python", 
+        "r", 
+        "julia", 
+        "nodejs"
+    ], 
     "name": "Line and Scatter Plot"
 }
