--- a/hard-coded/chart-types/mixed/contour-scatter/config.json
+++ b/hard-coded/chart-types/mixed/contour-scatter/config.json
@@ -1,4 +1,10 @@
 {
-    "languages": ["python", "matlab", "r", "node", "julia"],
+    "languages": [
+        "python", 
+        "matlab", 
+        "r", 
+        "julia", 
+        "nodejs"
+    ], 
     "name": "Steepest Descent with Contour and Scatter"
 }
