--- a/hard-coded/file-settings/privacy/privacy-true/config.json
+++ b/hard-coded/file-settings/privacy/privacy-true/config.json
@@ -1,11 +1,13 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "matlab",
-        "julia"
-    ],
-    "name": "Public Graphs",
-    "plot-options": {"world_readable": true}
+        "python", 
+        "r", 
+        "matlab", 
+        "julia", 
+        "nodejs"
+    ], 
+    "plot-options": {
+        "world_readable": true
+    }, 
+    "name": "Public Graphs"
 }
