--- a/hard-coded/multiple-axes-insets-subplots/insets/simple-inset/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/insets/simple-inset/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
         "python", 
-        "node", 
         "r", 
         "matlab", 
-        "julia"
+        "julia", 
+        "nodejs"
     ], 
     "name": "for the people"
 }
