--- a/hard-coded/chart-types/bubble/bubblechart/config.json
+++ b/hard-coded/chart-types/bubble/bubblechart/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "matlab",
-        "julia"
-    ],
+        "python", 
+        "r", 
+        "matlab", 
+        "julia", 
+        "nodejs"
+    ], 
     "name": "Marker Size, Color, and Symbol as an Array"
 }
