--- a/hard-coded/chart-types/contour/2dhistogram-contour-subplots/config.json
+++ b/hard-coded/chart-types/contour/2dhistogram-contour-subplots/config.json
@@ -1,11 +1,11 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "matlab",
-        "julia"
-    ],
-    "init": true,
+        "python", 
+        "r", 
+        "matlab", 
+        "julia", 
+        "nodejs"
+    ], 
+    "init": true, 
     "name": "2D Histogram Contour Plot with Histogram Subplots"
 }
