--- a/hard-coded/chart-types/error-bar/percent-error-bar/config.json
+++ b/hard-coded/chart-types/error-bar/percent-error-bar/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "matlab",
-        "julia"
-    ],
+        "python", 
+        "r", 
+        "matlab", 
+        "julia", 
+        "nodejs"
+    ], 
     "name": "Error Bars as a Percentage of the y-Value"
 }
