--- a/hard-coded/chart-types/mixed/bar-line/config.json
+++ b/hard-coded/chart-types/mixed/bar-line/config.json
@@ -1,10 +1,10 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "matlab",
-        "julia"
-    ],
+        "python", 
+        "r", 
+        "matlab", 
+        "julia", 
+        "nodejs"
+    ], 
     "name": "Line Chart and a Bar Chart"
 }
