--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-multiple/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/multiple-axes-multiple/config.json
@@ -1,9 +1,9 @@
 {
     "languages": [
-        "python",
-        "node",
-        "r",
-        "julia"
-    ],
+        "python", 
+        "r", 
+        "julia", 
+        "nodejs"
+    ], 
     "name": "Multiple Y-Axes"
 }
