--- a/hard-coded/chart-types/histogram/matlab-horizontal-histogram/config.json
+++ b/hard-coded/chart-types/histogram/matlab-horizontal-histogram/config.json
@@ -1,4 +1,4 @@
 {
-    "name": "Horizontal Histogram using MATLAB",
+    "name": "Horizontal Histogram using hist.m and bar.m",
     "languages" : []
 }
