get request place holder

--- a/hard-coded/get-requests-and-images/static-image/static-image-example/config.json
+++ b/hard-coded/get-requests-and-images/static-image/static-image-example/config.json
@@ -2,7 +2,7 @@
     "languages": [
         "python",
         "matlab",
-        "node"
+        "nodejs"
     ],
     "name": "Static Image Export"
 }
