--- a/hard-coded/specialty/stft/config.json
+++ b/hard-coded/specialty/stft/config.json
@@ -1,7 +1,7 @@
 {
     "has_thumbnail": false,
-    "name": "Shorti-Time Fourier Transform",
+    "name": "Short-Time Fourier Transform",
     "relative_url": "matlab-stft",
-    "description": "Basic STFT audio analysis in Matlab.",
+    "description": "Short-Time  audio analysis in MATLAB",
     "order": ["matlab-basic-stft"]
 }
