no more "matlab syntax" verbage - matlab grouped bar chart is now pretty

--- a/hard-coded/chart-types/bar/matlab-grouped-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-grouped-bar/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "MATLAB Syntax Grouped Bar Chart",
-    "description": "A Grouped Bar Chart made with MATLAB",
+    "name": "Grouped Bar Chart",
     "languages" : []
 }
