--- a/hard-coded/chart-types/bar/matlab-overlaid-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-overlaid-bar/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "MATLAB Syntax Overlaid Bar Chart",
-    "description": "Overlaid Bar Chart made with MATLAB",
+    "name": "Overlaid Bar Chart",
     "languages" : []
 }
