--- a/hard-coded/chart-types/bar/matlab-stacked-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-stacked-bar/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "MATLAB Syntax Stacked Bar Chart",
-    "description": "Stacked Bar Chart made with MATLAB",
+    "name": "Stacked Bar Chart",
     "languages" : []
 }
