--- a/hard-coded/chart-types/bar/matlab-style-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-style-bar/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "MATLAB Syntax Grouped Bar Chart",
-    "description": "A Styled Bar Chart made with MATLAB",
+    "name": "Colored Grouped Bar Chart",
     "languages" : []
 }
