--- a/hard-coded/chart-types/bar/matlab-basic-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-basic-bar/config.json
@@ -1,5 +1,4 @@
 {
-    "name": "MATLAB Syntax Basic Bar Chart",
-    "description": "A simple Bar Chart made with MATLAB",
+    "name": "Basic Bar Chart",
     "languages" : []
 }
