minor updates to examples

--- a/hard-coded/chart-types/histogram/mpl-basic-histogram/config.json
+++ b/hard-coded/chart-types/histogram/mpl-basic-histogram/config.json
@@ -1,4 +1,4 @@
 {
-    "name": "Basic Histogram with the hist Function",
+    "name": "Basic Histogram with the <code>hist</code> Function",
     "languages" : ["matplotlib"]
 }
