--- a/hard-coded/chart-types/scatter_exclusive/mpl-complex-scatter/config.json
+++ b/hard-coded/chart-types/scatter_exclusive/mpl-complex-scatter/config.json
@@ -1,4 +1,4 @@
 {
-  "name": "A More Complicated Scatter with Matplotlib",
+  "name": "Matplotlib Scatter Colors and Symbols",
   "languages": []
 }
