Changed configs for scripts so they explicitly note the language.

--- a/hard-coded/chart-types/area/mpl-basic-area/config.json
+++ b/hard-coded/chart-types/area/mpl-basic-area/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Matplotlib Area Plot",
-    "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Matplotlib Area Plot"
 }
