--- a/hard-coded/chart-types/area/mpl-multi-fill/config.json
+++ b/hard-coded/chart-types/area/mpl-multi-fill/config.json
@@ -1,4 +1,6 @@
 {
-  "name": "Multiple-Line Area Plot",
-  "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Multiple-Line Area Plot"
 }
