--- a/hard-coded/chart-types/area/mpl-stacked-line/config.json
+++ b/hard-coded/chart-types/area/mpl-stacked-line/config.json
@@ -1,4 +1,6 @@
 {
-  "name": "Making a Stacked-Line Plot with Matplotlib",
-  "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Making a Stacked-Line Plot with Matplotlib"
 }
