--- a/hard-coded/chart-types/bar/matlab-overlaid-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-overlaid-bar/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Overlaid Bar Chart",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Overlaid Bar Chart"
 }
