--- a/hard-coded/chart-types/bar/matlab-style-bar/config.json
+++ b/hard-coded/chart-types/bar/matlab-style-bar/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Colored Grouped Bar Chart",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Colored Grouped Bar Chart"
 }
