--- a/hard-coded/chart-types/gg-themes/tableau/config.json
+++ b/hard-coded/chart-types/gg-themes/tableau/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "<code>Tableau</code> Theme",
-    "languages": []
+  "languages": [
+    "ggplot2"
+  ], 
+  "name": "<code>Tableau</code> Theme"
 }
