--- a/hard-coded/chart-types/heatmap/matlab-basic-heatmap/config.json
+++ b/hard-coded/chart-types/heatmap/matlab-basic-heatmap/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Simple Heatmap with <code>imagesc</code>",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Simple Heatmap with <code>imagesc</code>"
 }
