--- a/hard-coded/chart-types/histogram/matlab-basic-histogram/config.json
+++ b/hard-coded/chart-types/histogram/matlab-basic-histogram/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Basic Histogram with MATLAB's <code>hist</code> Function",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Basic Histogram with MATLAB's <code>hist</code>\u00a0Function"
 }
