--- a/hard-coded/chart-types/histogram/matlab-horizontal-histogram/config.json
+++ b/hard-coded/chart-types/histogram/matlab-horizontal-histogram/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Horizontal Histogram using <code>hist</code> and <code>bar</code>",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Horizontal Histogram using <code>hist</code> and <code>bar</code>"
 }
