--- a/hard-coded/chart-types/histogram/matlab-overlaid-histogram/config.json
+++ b/hard-coded/chart-types/histogram/matlab-overlaid-histogram/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Overlaid Histogram with <code>hist</code>",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Overlaid Histogram with <code>hist</code>"
 }
