--- a/hard-coded/chart-types/histogram/matlab-stacked-histogram/config.json
+++ b/hard-coded/chart-types/histogram/matlab-stacked-histogram/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Stacked Histogram with the <code>hist</code> Function",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Stacked Histogram with the <code>hist</code> Function"
 }
