--- a/hard-coded/chart-types/line_and_scatter/mpl-line-style/config.json
+++ b/hard-coded/chart-types/line_and_scatter/mpl-line-style/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Colored Matplotlib Line Chart",
-    "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Colored Matplotlib Line Chart"
 }
