--- a/hard-coded/chart-types/line_exclusive/matlab-basic-line/config.json
+++ b/hard-coded/chart-types/line_exclusive/matlab-basic-line/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Basic Line Chart with the <code>plot</code> Function",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Basic Line Chart with the <code>plot</code> Function"
 }
