--- a/hard-coded/chart-types/line_exclusive/matlab-line-markers/config.json
+++ b/hard-coded/chart-types/line_exclusive/matlab-line-markers/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "MATLAB Line Plot Marker Types",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "MATLAB Line Plot Marker Types"
 }
