--- a/hard-coded/chart-types/line_exclusive/matlab-line-style/config.json
+++ b/hard-coded/chart-types/line_exclusive/matlab-line-style/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "MATLAB Plot Colors and Symbols",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "MATLAB Plot Colors and Symbols"
 }
