--- a/hard-coded/chart-types/line_shapes/geom_step/config.json
+++ b/hard-coded/chart-types/line_shapes/geom_step/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "<code>geom_step</code>",
-    "languages": []
+  "languages": [
+    "ggplot2"
+  ], 
+  "name": "<code>geom_step</code>"
 }
