--- a/hard-coded/chart-types/network_graphs/matlab-graph-plot/config.json
+++ b/hard-coded/chart-types/network_graphs/matlab-graph-plot/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Graphing Network Graphs with Adjacency<br>Matrices and MATLAB's <code>gplot</code> function",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Graphing Network Graphs with Adjacency<br>Matrices and MATLAB's <code>gplot</code> function"
 }
