--- a/hard-coded/chart-types/scatter_exclusive/matlab-scatter-plot/config.json
+++ b/hard-coded/chart-types/scatter_exclusive/matlab-scatter-plot/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Simple Scatter Plot",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Simple Scatter Plot"
 }
