--- a/hard-coded/chart-types/scatter_exclusive/matlab-seamount-scatter/config.json
+++ b/hard-coded/chart-types/scatter_exclusive/matlab-seamount-scatter/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Scatter Plot with Colors and Sizes",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Scatter Plot with Colors and Sizes"
 }
