--- a/hard-coded/chart-types/scatter_exclusive/mpl-complex-scatter/config.json
+++ b/hard-coded/chart-types/scatter_exclusive/mpl-complex-scatter/config.json
@@ -1,4 +1,6 @@
 {
-  "name": "Matplotlib Scatter Colors and Symbols",
-  "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Matplotlib Scatter Colors and Symbols"
 }
