--- a/hard-coded/chart-types/scatter_exclusive/mpl-scatter/config.json
+++ b/hard-coded/chart-types/scatter_exclusive/mpl-scatter/config.json
@@ -1,4 +1,6 @@
 {
-  "name": "Basic Matplotlib Scatter Plot",
-  "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Basic Matplotlib Scatter Plot"
 }
