--- a/hard-coded/chart-types/sparse_matrix_graphs/matlab-spy-chart/config.json
+++ b/hard-coded/chart-types/sparse_matrix_graphs/matlab-spy-chart/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Sparse Matrix Visualization with the <code>spy</code> Function",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Sparse Matrix Visualization with the <code>spy</code> Function"
 }
