--- a/hard-coded/get-requests-and-images/get-requests/python-get-data/config.json
+++ b/hard-coded/get-requests-and-images/get-requests/python-get-data/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Get Data and Change Plot",
-    "languages": []
+  "languages": [
+    "python"
+  ], 
+  "name": "Get Data and Change Plot"
 }
