--- a/hard-coded/get-requests-and-images/get-requests/python-replot1/config.json
+++ b/hard-coded/get-requests-and-images/get-requests/python-replot1/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Get and Replot a Public Figure with URL",
-    "languages": []
+  "languages": [
+    "python"
+  ], 
+  "name": "Get and Replot a Public Figure with URL"
 }
