--- a/hard-coded/layout/annotations/matlab-text-chart-basic/config.json
+++ b/hard-coded/layout/annotations/matlab-text-chart-basic/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Adding Text to Plots with the <code>text</code> Function",
-    "languages": []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Adding Text to Plots with the <code>text</code> Function"
 }
