--- a/hard-coded/layout/legends/matlab-legend-inside/config.json
+++ b/hard-coded/layout/legends/matlab-legend-inside/config.json
@@ -1,4 +1,6 @@
 {
-    "languages": [],
-    "name": "Positioning MATLAB Legends Inside the Plot"
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Positioning MATLAB Legends Inside the Plot"
 }
