--- a/hard-coded/multiple-axes-insets-subplots/insets/matlab-simple-inset/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/insets/matlab-simple-inset/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Multiple Inset Graphs in MATLAB",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Multiple Inset Graphs in MATLAB"
 }
