--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/matlab-two-axes-plot-bar/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/matlab-two-axes-plot-bar/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "<code>plotyy</code> with a Line Plot and a Bar Chart",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "<code>plotyy</code> with a Line Plot and a Bar Chart"
 }
