--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/matlab-two-axes-plot-style/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/matlab-two-axes-plot-style/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "<code>plotyy</code> and multiple colored linear and log y-axes",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "<code>plotyy</code> and multiple colored linear and log y-axes"
 }
