--- a/hard-coded/multiple-axes-insets-subplots/multiple-axes/matlab-two-axes-plot/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/multiple-axes/matlab-two-axes-plot/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Multiple y-axes with the <code>plotyy</code> function",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Multiple y-axes with the <code>plotyy</code> function"
 }
