--- a/hard-coded/multiple-axes-insets-subplots/subplots/mpl-simple-subplot/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/mpl-simple-subplot/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "matplotlib's <code>subplot</code> command",
-    "languages" : []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "matplotlib's <code>subplot</code> command"
 }
