--- a/hard-coded/chart-types/line_and_scatter/gg-geom_point/config.json
+++ b/hard-coded/chart-types/line_and_scatter/gg-geom_point/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "<code>geom_point</code>",
-    "languages": []
+  "languages": [
+    "ggplot2"
+  ], 
+  "name": "<code>geom_point</code>"
 }
