--- a/hard-coded/chart-types/line_and_scatter/mpl-line-scatter/config.json
+++ b/hard-coded/chart-types/line_and_scatter/mpl-line-scatter/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Line and Scatter Plot",
-    "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Line and Scatter Plot"
 }
