--- a/hard-coded/get-requests-and-images/get-requests/python-change_plot/config.json
+++ b/hard-coded/get-requests-and-images/get-requests/python-change_plot/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Get and Change a Public Figure",
-    "languages": []
+  "languages": [
+    "python"
+  ], 
+  "name": "Get and Change a Public Figure"
 }
