--- a/hard-coded/layout/annotations/mpl-simple-annotation/config.json
+++ b/hard-coded/layout/annotations/mpl-simple-annotation/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "Simple Annotation with the <code>annotate</code> method",
-    "languages" : []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Simple Annotation with the <code>annotate</code> method"
 }
