--- a/hard-coded/multiple-axes-insets-subplots/subplots/matlab-three-subplots/config.json
+++ b/hard-coded/multiple-axes-insets-subplots/subplots/matlab-three-subplots/config.json
@@ -1,4 +1,6 @@
 {
-    "name": "MATLAB's <code>subplot</code> command",
-    "languages" : []
+  "languages": [
+    "matlab"
+  ], 
+  "name": "MATLAB's <code>subplot</code> command"
 }
