--- a/hard-coded/specialty/fft/matlab-basic-fft/config.json
+++ b/hard-coded/specialty/fft/matlab-basic-fft/config.json
@@ -1,5 +1,7 @@
 {
-    "languages": [], 
-    "init": false, 
-    "name": "Basic FFT audio analysis in Matlab."
+  "languages": [
+    "matlab"
+  ], 
+  "init": false, 
+  "name": "Basic FFT audio analysis in Matlab."
 }
