--- a/hard-coded/specialty/fft/mpl-basic-fft/config.json
+++ b/hard-coded/specialty/fft/mpl-basic-fft/config.json
@@ -1,4 +1,6 @@
 {
-  "name": "Basic FFT Plot with Matplotlib",
-  "languages": []
+  "languages": [
+    "matplotlib"
+  ], 
+  "name": "Basic FFT Plot with Matplotlib"
 }
