--- a/hard-coded/specialty/stft/matlab-basic-stft/config.json
+++ b/hard-coded/specialty/stft/matlab-basic-stft/config.json
@@ -1,4 +1,6 @@
 {
-    "languages": [],
-    "name": "Basic Audio Analysis with the <br>STFT Spectrogram in MATLAB"
+  "languages": [
+    "matlab"
+  ], 
+  "name": "Basic Audio Analysis with the <br>STFT Spectrogram in MATLAB"
 }
