--- a/hard-coded/chart-types/bar/config.json
+++ b/hard-coded/chart-types/bar/config.json
@@ -3,6 +3,6 @@
     "name": "Bar Charts",
     "relative_url": "bar-charts",
     "order": ["matlab-basic-bar", "matlab-grouped-bar", "matlab-stacked-bar","matlab-overlaid-bar","matlab-style-bar",
-              "basic-bar", "grouped-bar", "stacked-bar", "style-bar"],
+              "basic-bar", "grouped-bar", "stacked-bar", "style-bar", "bar-with-hover-text"],
     "description": "How to make a bar chart in {language}. {num_examples} examples of grouped, stacked, overlaid, and colored bar charts."
 }
