--- a/hard-coded/chart-types/area/basic-area/config.json
+++ b/hard-coded/chart-types/area/basic-area/config.json
@@ -1,10 +1,11 @@
 {
     "languages": [
-        "python", 
-        "r", 
-        "matlab", 
-        "julia", 
-        "nodejs"
-    ], 
+        "python",
+        "r",
+        "matlab",
+        "julia",
+        "nodejs",
+        "js"
+    ],
     "name": "Basic Overlaid Area Chart"
 }
